Merge pull request #11
* многопоточность сортировок исправлена

* Очистка, вынесение в сервис, тесты полностью

* Сервисный класс для меню

* Merge remote-tracking branch 'origin/Anna' into Andrew